Move property tree debugging code to platform/graphics/paint/ (try #2)

This is a revert of https://codereview.chromium.org/2639143002, with the following
fixes:

1. Add a line in PropertyTreeStatePrinter::pathAsString to output "root"
2. Change #ifndef NDEBUG to #if DCHECK_IS_ON()

The former fixes the unittest. The latter ensures the test actually runs on the
bots, and increases debugging convenience.

BUG=682113
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2647063002
Cr-Commit-Position: refs/heads/master@{#445197}

Former-commit-id: cd60843ee27fdeeb53a6a9f236cf9de4eec5135b