third_party/WebKit/Source/platform/graphics/paint/ClipPaintPropertyNode.cpp
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "platform/graphics/paint/ClipPaintPropertyNode.h"
 
 #include "platform/geometry/LayoutRect.h"
+#include "platform/graphics/paint/PropertyTreeState.h"
 
 namespace blink {
 
@@ -24,5 +25,14 @@ String ClipPaintPropertyNode::toString() const {
       m_clipRect.toString().ascii().data(),
       compositingReasonsAsString(m_directCompositingReasons).ascii().data());
 }
+
+#if DCHECK_IS_ON()
+
+String ClipPaintPropertyNode::toTreeString() const {
+  return blink::PropertyTreeStatePrinter<blink::ClipPaintPropertyNode>()
+      .pathAsString(this);
+}
+
+#endif
 
 }  // namespace blink
