third_party/WebKit/Source/platform/graphics/paint/EffectPaintPropertyNode.h
@@ -103,6 +103,8 @@ class PLATFORM_EXPORT EffectPaintPropertyNode
            m_directCompositingReasons == o.m_directCompositingReasons &&
            m_compositorElementId == o.m_compositorElementId;
   }
+
+  String toTreeString() const;
 #endif
 
   String toString() const;
